Changed garbagecollection.md to README.md again